# DropZone

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml
src/: main.rs  settings.rs  store.rs
