[package]
name = "dropzone"
version = "0.0.1"
edition = "2021"
description = "Simple cloud clipboard"
authors = ["Arjun Komath <arjunkomath@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arjunkomath/DropZone"
keywords = ["cloud", "clipboard", "sync", "universal"]

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
config = "0.13.3"
directories = "5.0.1"
inquire = "0.6.2"
redis = "0.23.1"
toml = "0.7.6"
