[package]
name = "dropzone"
version = "0.1.2"
edition = "2021"
description = "A simple cloud clipboard"
authors = ["Arjun Komath <arjunkomath@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arjunkomath/DropZone"
keywords = ["cloud", "clipboard", "sync", "universal"]

[[bin]]
name = "dz"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
clipboard = "0.5.0"
config = "0.13.3"
directories = "5.0.1"
inquire = "0.6.2"
redis = "0.23.1"
toml = "0.7.6"
